PivotTable review fixes 41